# pyForJoyTV

./: .gitignore  forjoy.txt  forjoytv_gui.py  forjoytv_st.py  forjoytv_updatedb.py  pyproject.toml
