[tool.poetry]
name = "pyforjoytv"
version = "0.1.0"
description = ""
authors = ["Markus Mohnen <markus.mohnen@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
nicegui = "^1.4.2"
streamlit = "^1.45.0"
myjdapi = "^1.1.9"
short-unique-id = "^0.1.2"
human-readable = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
