[project]
name = "pyforjoytv"
version = "0.1.0"
description = ""
authors = [{ name = "Markus Mohnen", email = "markus.mohnen@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "requests",
    "nicegui",
    "streamlit",
    "myjdapi",
    "short-unique-id",
    "human-readable",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
